syntax = "proto3";

package info.ls.grpc.v1;

option java_multiple_files = true;

service Greeter {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
  rpc SayHelloAgain (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string Name = 1;
}

message SayHelloResponse {
  string Message = 1;
}